docs/tests/nameres/control_flow/valid/ReturnEmpty.src
// Valid 

fn void main() {
    return;
}