docs/tests/nameres/control_flow/invalid/IfNoExpr.src
// Invalid

fn void main() {
    if () {
        
    }
}